# clinv

./: .gitignore  Cargo.toml  clinv.db  clinv1.db  template.html  test_template.html
src/: cli.rs  commands.rs  database.rs  lib.rs  main.rs  models.rs  utils.rs
tests/: cli.rs  commands.rs  database.rs  models.rs
